# All_about_StockMarket

./: .gitignore  LICENSE  Model.py  README.MD  README.md  app.py  candle_stick.py  iifl.py  pyproject.toml  render.yaml  requirements.txt  result.json  run_stocksage.py  runner.sh  test2.py
data/raw/: INFIBEAM_NS.csv  INFY_NS.csv  TCS_NS.csv
routes/: __init__.py  chart_routes.py  news_api.py  news_routes.py  predict_routes.py  symbols_api.py
scripts/: process_symbols.py  update_models.py
scripts/data/: nse_symbols.json
scripts/storage/raw/: 20MICRONS_NS.csv  3MINDIA_NS.csv  (+1 more)
services/: equity_scraper.py  iifl_scraper.py  legacy_model_predictor.py  livemint_scraper.py
services/ml/: model_predictor.py
static/: generate_candlestick.html
storage/exported_model/: keras_metadata.pb  saved_model.pb
storage/raw/: 3MINDIA.NS.csv  3MINDIA_NS.csv  AKSHARCHEM_NS.csv  HDB.csv  HDFCBANK.NS.csv  HDFCBANK_NS.csv  INFIBEAM.NS.csv  INFIBEAM_NS.csv  INFY.NS.csv  INFY_NS.csv  KOTAKBANK.NS.csv  KOTAKBANK_NS.csv  NATIONALUM.NS.csv  NATIONALUM_NS.csv  NSEI.csv  RELIANCE.NS.csv  RELIANCE_NS.csv  SBIN.NS.csv  SBIN_NS.csv  TCS.NS.csv  TCS_NS.csv  ^NSEI.csv
storage/scalers/: 20MICRONS.NS_scaler.pkl  21STCENMGM.NS_scaler.pkl  3MINDIA.NS_scaler.pkl  AKSHARCHEM.NS_scaler.pkl  HDB_scaler.pkl  HDFCBANK.NS_scaler.pkl  INFIBEAM.NS_scaler.pkl  INFY.NS_scaler.pkl  KOTAKBANK.NS_scaler.pkl  NATIONALUM.NS_scaler.pkl  RELIANCE.NS_scaler.pkl  SBIN.NS_scaler.pkl  TCS.NS_scaler.pkl  ^NSEI_scaler.pkl
templates/: display_candlestick.html  index.html  layout.html  news_combined.html  predict.html
(+3 files in other folders)
